# clashcode

./: .gitignore  README.md  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci.yml  release.yml
clashcode/: __init__.py
clashcode/cli/: __init__.py  main.py
clashcode/core/: __init__.py  backup.py  config.py  factory.py  git_detector.py  impact_analyzer.py  llm.py  model_selector.py  models.py  orchestrator.py  red_blue_team.py  reporters.py
clashcode/mcp/: __init__.py  server.py
tests/: test_backup.py  test_config.py  test_factory.py  test_git_detector.py  test_impact_analyzer.py  test_llm.py  test_model_selector.py  test_models.py  test_reporters.py
